--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,7 +1,10 @@
 // font-size
 
+$font-size7: 7px;
 $font-size8: 8px;
 $font-size9: 9px;
+$font-size12: 12px;
+$font-size13: 13px;
 $font-size14: 14px;
 $font-size15: 15px;
 $font-size16: 16px;
@@ -34,6 +37,7 @@ $color-shadow: 0px 4px 24px -4px rgba(0, 0, 0, 0.16);
 $bg-elev: radial-gradient(1662.48% 205.49% at 53.54% -74.56%, #181818 40.24%, #A3A3A3 100%);
 $prod-bshadow: 0px 4px 24px -4px rgba(0, 0, 0, 0.16); 
 $iphone-title: #1A1A1A;
+$link-color: #F2F2F2;
 
 // transition
 
