--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,6 +3,7 @@
 $font-size7: 7px;
 $font-size8: 8px;
 $font-size9: 9px;
+$font-size10: 10px;
 $font-size12: 12px;
 $font-size13: 13px;
 $font-size14: 14px;
@@ -13,6 +14,7 @@ $font-size19: 19px;
 $font-size24: 24px;
 $font-size26: 26px;
 $font-size36: 36px;
+$font-size45: 45px;
 $font-size48: 48px;
 
 // font-weight
@@ -38,6 +40,11 @@ $bg-elev: radial-gradient(1662.48% 205.49% at 53.54% -74.56%, #181818 40.24%, #A
 $prod-bshadow: 0px 4px 24px -4px rgba(0, 0, 0, 0.16); 
 $iphone-title: #1A1A1A;
 $link-color: #F2F2F2;
+$border-right: #D1D1D1;
+$but-hover: #35353d;
+$but-active: #302a2a;
+$but-hover2: #918a8a;
+$link-hover: rgba(0, 0, 0, 0.5);
 
 // transition
 
