--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,26 @@
+@use '../styles/variables.scss';
+
+@font-face {
+  font-family: 'SF Pro Text';
+  src: url('../public/fonts/SFProText-Bold.ttf') format('truetype'),
+  url('../public/fonts/SFProText-Bold.ttf') format('truetype');
+  font-weight: variables.$font-weight600;
+}
+
+@font-face {
+  font-family: 'SF Pro Text';
+  src: url('../public/fonts/SFProText-Regular.ttf') format('truetype'),
+  url('../public/fonts/SFProText-Regular.ttf') format('truetype');
+  font-weight: variables.$font-weight400;
+}
+  
+@font-face {
+  font-family: 'SF Pro Text';
+  src: url('../public/fonts/SFProText-Medium.ttf') format('truetype'),
+  url('../public/fonts/SFProText-Medium.ttf') format('truetype');
+  font-weight: variables.$font-weight500;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -5,7 +28,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "SF Pro Text", sans-serif;
+  font-family: 'SF Pro Text', sans-serif;
 }
 
 ul {
