--- a/components/stream/stream.scss
+++ b/components/stream/stream.scss
@@ -23,8 +23,8 @@
   }
 
   &__name {
-    font-size: variables.$font-size9;
-    margin-top: 5px;
+    font-size: variables.$font-size7;
+    margin-top: 0;
   }
 
   &__title {
@@ -161,8 +161,8 @@
     }
 
     &__name {
-      font-size: variables.$font-size9;
-      margin-top: 4px;
+      font-size: variables.$font-size8;
+      margin-top: 3px;
     }
 
     &__button {
