--- a/components/iphone/iphone.scss
+++ b/components/iphone/iphone.scss
@@ -18,7 +18,7 @@
     bottom: 0;
     width: 100%;
     height: 236px;
-    background: url('/images/bgIphone.png') center top/contain no-repeat;
+    background: url('/images/bgIphone.png') center top/cover no-repeat;
     z-index: -2;
   }
 
@@ -60,6 +60,15 @@
     margin-top: 20px;
     z-index: 3;
   }
+
+   &__status {
+    position: absolute;
+    bottom: 28px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-weight: variables.$font-weight500;
+    font-size: variables.$font-size45; 
+   }
 }
 
 @media (min-width: 768px) {
