--- a/components/products/products.scss
+++ b/components/products/products.scss
@@ -42,8 +42,8 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 387px;
-    background: url('/images/bgIphone.png') center top/contain no-repeat;
+    height: 303px;
+    background: url('/images/bgIphone.png') center top/cover no-repeat;
     z-index: -2;
   }
 
@@ -79,7 +79,14 @@
       background: variables.$link-active;
     }
  }
-
+   &__status {
+    position: absolute;
+    bottom: -49px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-weight: variables.$font-weight500;
+    font-size: variables.$font-size45; 
+   }
 }
 
 @media (min-width: 768px) {
@@ -158,6 +165,10 @@
     padding: 42px 60px 20px 60px;
     &__wrapper {
       grid-template-columns: repeat(4, 311px);
+    }
+
+    &__slider {
+      justify-content: center;
     }
   }
 }
